syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.apache.skywalking.testcase.gpc.proto";

service Greeter {
    rpc SayHello (stream HelloRequest) returns (HelloReply) {
    }
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}